test/Fail/Issue390.agda
module Issue390 where

data main : Set where
